# dithr

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  playwright.config.js
.github/: copilot-instructions.md  pull_request_template.md
docs/: api-reference.md  architecture.md  building.md  cart-format.md  cli.md  code-style.md  getting-started.md  js-code-style.md  performance-guide.md  testing.md
examples/: CMakeLists.txt  CREDITS.md
examples/audio_demo/: cart.json  package-lock.json  package.json  tsconfig.json
examples/audio_demo/src/: main.js  main.ts
examples/collision_demo/: cart.json  package-lock.json  package.json
examples/collision_demo/src/: main.js  main.ts
examples/drawlist_demo/: cart.json  package-lock.json  package.json
examples/drawlist_demo/src/: main.js  main.ts
examples/drawlist_demo/types/: dithr.d.ts
examples/editor/: build.js  cart.json  eslint.config.js  flags.hex  map.json  music.json  package-lock.json  package.json  sfx.json  sprites.hex
examples/editor/src/: browser.js  browser.ts  buffer.js  buffer.ts  config.js  config.ts  draw.js  draw.ts  edit.js  edit.ts  find.js  find.ts  helpers.js  helpers.ts  main.js  main.ts  main_original.js.bak  map_editor.js  map_editor.ts  music_editor.js  music_editor.ts  sfx_editor.js  sfx_editor.ts  sprite_editor.js  sprite_editor.ts  state.js  state.ts  stroke_history.js  stroke_history.ts  tokenizer.js  tokenizer.ts  vim.js  vim.ts
examples/event_demo/: .gitignore  cart.json  package-lock.json  package.json
examples/event_demo/src/: main.js  main.ts
examples/gauntlet_clone/: cart.json  package-lock.json  package.json
examples/gauntlet_clone/src/: main.js  main.ts
examples/hello_world/: README.md  cart.json  eslint.config.js  package-lock.json  package.json
examples/hello_world/src/: main.js  main.ts
examples/input_demo/: cart.json  package-lock.json  package.json
examples/input_demo/src/: main.js  main.ts
examples/map_demo/: cart.json  package-lock.json  package.json
examples/map_demo/src/: main.js  main.ts
examples/palette_fx/: cart.json  package-lock.json  package.json
examples/palette_fx/src/: main.js  main.ts
examples/persistence/: cart.json  package-lock.json  package.json
examples/persistence/src/: main.js  main.ts
examples/platformer/: cart.json  package-lock.json  package.json
examples/platformer/src/: main.js  main.ts
examples/postfx_demo/: cart.json  package-lock.json  package.json
examples/postfx_demo/src/: main.js  main.ts
examples/raycaster/: .editorconfig  cart.json  package-lock.json  package.json  tsconfig.json
examples/raycaster/src/: main.js  main.ts
examples/sprite_animation/: cart.json  package-lock.json  package.json
examples/sprite_animation/src/: main.js  main.ts
examples/spritemark/: cart.json  package-lock.json  package.json
examples/spritemark/src/: main.js  main.ts
examples/synth_demo/: cart.json  eslint.config.js  package-lock.json  package.json
examples/synth_demo/src/: main.js  main.ts
examples/sys_explorer/: cart.json  package-lock.json  package.json  save_test.txt  test_data.txt
examples/sys_explorer/src/: main.js  main.ts
examples/tilemap/: cart.json  package-lock.json  package.json  tsconfig.json
examples/tilemap/assets/maps/: level1.tmx
examples/tilemap/src/: main.js  main.ts
examples/touch_demo/: .gitignore  cart.json  eslint.config.js  package-lock.json  package.json
examples/touch_demo/src/: main.js
examples/transition_demo/: cart.json  eslint.config.js  package-lock.json  package.json
examples/transition_demo/src/: main.js  main.ts
examples/tween_showcase/: .prettierrc  cart.json  package-lock.json  package.json
examples/tween_showcase/src/: main.js  main.ts
examples/ui_demo/: cart.json  package-lock.json  package.json
examples/ui_demo/src/: main.js  main.ts
examples/ui_layout_demo/: cart.json  package-lock.json  package.json
examples/ui_layout_demo/src/: main.js
source/: mvngin.c
src/: CMakeLists.txt  audio.c  audio.h  cart.c  cart.h  cart_import.c  cart_import.h  console.c  console.h  console_defs.h  event.c  event.h  font.h  gamepad.c  gamepad.h  graphics.c  graphics.h  graphics_internal.h  graphics_sheet.c  graphics_sprite_meta.c  graphics_state.c  graphics_transitions.c  input.c  input.h  main.c  mouse.c  mouse.h  particles.c  particles.h  postfx.c  postfx.h  quickjs_compat.h  resources.c  resources.h  runtime.c  runtime.h  simd.h  synth.c  synth.h  touch.c  (+5 more)
src/api/: api_common.h  api_register.c  cam_api.c  cart_api.c  col_api.c  evt_api.c  gfx_api.c  input_api.c  key_api.c  map_api.c  math_api.c  mouse_api.c  mus_api.c  pad_api.c  particles_api.c  postfx_api.c  res_api.c  sfx_api.c  synth_api.c  sys_api.c  touch_api.c  tween_api.c  ui_api.c
test_api_res_tmp/: data.json  f.hex  p.hex
test_resources_tmp/: data.json
tests/: CMakeLists.txt  lsan_suppressions.txt  test_api_bridge.c  test_api_bridge_gfx.c  test_api_bridge_map.c  test_api_res.c  test_audio.c  test_cam.c  test_cart.c  test_cart_import.c  test_col.c  test_console.c  test_editor_js.c  test_event.c  test_graphics.c  test_graphics_ext.c  test_harness.h  test_input.c  test_map.c  test_module_normalize.c  test_mouse_gamepad.c  test_particles.c  test_postfx.c  test_resources.c  test_runtime.c  test_synth.c  test_touch.c  test_tween.c  test_ui.c  wasm-smoke.spec.js
tests/fuzz/: CMakeLists.txt  fuzz_cart_import.c  fuzz_graphics.c  fuzz_postfx.c  fuzz_runtime.c  fuzz_synth.c
tests/js/: test_find_replace.js  test_helpers.js  test_map_autotile.js  test_music_editor.js  test_sfx_editor.js  test_sprite_algo.js  test_stroke_history.js  test_tokenizer.js  test_vim_motions.js
tests/node/: test_resolve_assets.js
tests/perf/: CMakeLists.txt  perf_blit.c  perf_harness.h  perf_primitives.c
tests/wasm-browser/: package-lock.json  playwright.config.js  wasm-smoke.spec.js
tools/: cart-export.js  create-cart.js  generate-pages-index.js  prepare-dynamic.js  resolve-assets.js  serve-wasm.js  watch-wasm.js
(+13 files in other folders)
